feedback fix v2
