# pkg/ping/model.go
@@ -1,0 +1,5 @@
+package ping
+
+type pingResp struct {
+	Timestamp string `json:"timestamp"`
+}
